deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-balancing-test-app
  namespace: lb-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: load-balancing-test-app
  template:
    metadata:
      labels:
        app: load-balancing-test-app
    spec:
      containers:
      - name: load-balancing-test-app
        image: olorton/load-balancing-test-app
        ports:
        - containerPort: 3000
