service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancing-test-app
  namespace: lb-test
spec:
  selector:
    app: load-balancing-test-app
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
