ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynode-ingress
  namespace: lb-test
spec:
  rules:
  - host: lb-test.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: load-balancing-test-app
            port:
              number: 80
